# TriyamiRender

./: CMakeLists.txt  README.md  main.cpp
Camera/: Camera.cpp  Camera.h
Mesh/: Mesh.cpp  Mesh.h
Renderer/: Renderer.cpp  Renderer.h
Shader/: Shader.cpp  Shader.h
shaders/: fragment_shader.glsl  vertex_shader.glsl
